--- a/public/stylesheets/vishwakarma.css
+++ b/public/stylesheets/vishwakarma.css
@@ -312,6 +312,7 @@ textarea {
     height: 100%;
     border: solid 1px #ccc;
     background: #fafafa;
+    overflow: auto;
 }
 
 .stdout .label {
@@ -387,8 +388,10 @@ input.project_name {
 }
 
 .sidebar_right .header {
-    margin-top: 5px;
+    margin-top: 10px;
     margin-bottom: 5px;
+    font-size: 16px;
+    color: #444;
 }
 
 .crontab {
